# sugarvany-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg  uvicorn_config.py
.github/workflows/: ci.yml
scripts/: run_production.sh
sugarvany_api/: __init__.py
sugarvany_api/application/: health_service.py
sugarvany_api/core/: config.py  logger.py
sugarvany_api/domain/: health.py
sugarvany_api/interface/api/: app.py  health_router.py  router.py
sugarvany_lib/: README.md  __init__.py
tests/: __init__.py  test_health.py
