[project]
name = "sugarvany-api"
version = "0.1.0"
description = "Python api based on fast api"
authors = [
    {name = "Skander Marnissi",email = "skander.marnissi2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "flake8-bugbear (>=24.12.12,<25.0.0)",
    "flake8-comprehensions (>=3.16.0,<4.0.0)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry]
package-mode = false

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^24.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "*"

[tool.black]
line-length = 70
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
